WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199724
Null deref of Range under WebPage::startAutoscrollAtPosition
https://bugs.webkit.org/show_bug.cgi?id=199724
Summary
Null deref of Range under WebPage::startAutoscrollAtPosition
Tim Horton
Reported
2019-07-11 13:45:09 PDT
Null deref of Range under WebPage::startAutoscrollAtPosition
Attachments
Patch
(2.64 KB, patch)
2019-07-11 13:45 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-07-11 13:45:21 PDT
Created
attachment 373948
[details]
Patch
Tim Horton
Comment 2
2019-07-11 13:45:23 PDT
<
rdar://problem/41127089
>
WebKit Commit Bot
Comment 3
2019-07-11 15:23:04 PDT
Comment on
attachment 373948
[details]
Patch Clearing flags on attachment: 373948 Committed
r247369
: <
https://trac.webkit.org/changeset/247369
>
WebKit Commit Bot
Comment 4
2019-07-11 15:23:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug