Null deref of Range under WebPage::startAutoscrollAtPosition https://bugs.webkit.org/show_bug.cgi?id=199724 <rdar://problem/41127089>

Reviewed by Dean Jackson.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::startAutoscrollAtPosition):
Refactor this function to be early-return-y, and add one more
early return if the Range is null.


Canonical link: https://commits.webkit.org/213604@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247369 268f45cc-cd09-0410-ab3c-d52691b4dbfc